[package]
name = "subtle-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"